objects/Credit_Application__c.object
<CustomObject>
    <fields>
        <fullName>AOR_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AOR Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Applications</relationshipLabel>
        <relationshipName>Credit_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertiser_Website__c</fullName>
        <label>Advertiser Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>Advertiser__c</referenceTo>
        <relationshipLabel>Credit Applications</relationshipLabel>
        <relationshipName>Credit_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_LOG_Comments__c</fullName>
        <label>Agency LOG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agency_LOG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency LOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Website__c</fullName>
        <label>Agency Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Finance Manager Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Pending Upper Management Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <label>Application Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Advertiser</fullName>
                </value>
                <value>
                    <fullName>New Agency</fullName>
                </value>
                <value>
                    <fullName>Credit Limit Increase</fullName>
                </value>
                <value>
                    <fullName>Credit Limit Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Information__c</fullName>
        <inlineHelpText>Please provide details related to company applying for credit. Make sure to identify the industry and brief background of the client.</inlineHelpText>
        <label>Client Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Email</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Applications</relationshipLabel>
        <relationshipName>Credit_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Application</label>
        <referenceTo>Credit_Application__c</referenceTo>
        <relationshipLabel>Credit Applications</relationshipLabel>
        <relationshipName>Credit_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Granted__c</fullName>
        <label>Credit Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Increase_Details__c</fullName>
        <label>Credit Limit Increase Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Credit_Limit__c</fullName>
        <label>Current Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Credit_Term_Support__c</fullName>
        <inlineHelpText>Comments used to support terms granted</inlineHelpText>
        <label>Finance Credit Term Support</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Recommended_Credit__c</fullName>
        <label>Finance Recommended Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Recommended_Terms__c</fullName>
        <label>Finance Recommended Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Review_Comments__c</fullName>
        <inlineHelpText>These are the comments that will support the review of the credit application process.</inlineHelpText>
        <label>Finance Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Search_Comments__c</fullName>
        <label>Google Search Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Search__c</fullName>
        <label>Google Search</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SF_Bookings_AVG_Type__c</fullName>
        <label>SF Bookings (AVG) Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Bookings_Notes__c</fullName>
        <label>SF Bookings Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF_Bookings__c</fullName>
        <label>SF Bookings (AVG)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF_Ref_ID__c</fullName>
        <formula>&quot;(ref:&quot; &amp; Id &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Ref ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Granted__c</fullName>
        <label>Terms Granted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Advertiser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Final_Approval</fullName>
        <columns>NAME</columns>
        <columns>Application_Status__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Advertiser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted,Pending Finance Manager Review,Complete</value>
        </filters>
        <label>Pending Final Approval</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Credit Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AOR_Review_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Application_Status__c ,&quot;Pending Finance Manager Review&quot;),ISPICKVAL( Application_Type__c , &quot;New Advertiser&quot;), AOR_Received__c = FALSE )</errorConditionFormula>
        <errorMessage>Finance must obtain an AOR. The AOR must be reviewed and authorized by Finance Manager before credit application can be approved and completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finance_Credit_Term_Support_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Application_Status__c ,&quot;Pending Finance Manager Review&quot;),ISBLANK(Finance_Credit_Term_Support__c))</errorConditionFormula>
        <errorMessage>Finance Manager must provide comments supporting credit limit/ terms granted</errorMessage>
    </validationRules>
</CustomObject>